# open-enterprise-agentops-mesh

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  benchmark_results_v2_2.txt  deployment_validation_results_v2_3.txt  docker-compose.yml  docker_compose_smoke_plan_v2_3.txt  public_site_ux_results_v2_6.txt  roadmap.json  smoke_results_v1_4.txt  smoke_results_v2_0.txt  smoke_results_v2_1.txt  smoke_results_v2_2.txt  test_results_v0_9.txt  test_results_v1_0.txt  test_results_v1_1.txt  test_results_v1_3.txt  test_results_v1_7.txt  test_results_v2_1.txt  test_results_v2_5.txt  test_results_v2_6.txt  test_results_v2_7.txt  validation_results_v2_1.txt  validation_results_v2_2.txt  validation_results_v2_6.txt
framework/backend/: README.md  pyproject.toml
framework/backend/agentops_mesh_api/: __init__.py  client.py  main.py  meshctl.py
framework/backend/data/: agents.json  audit_events.json  benchmark_runs.json  connector_dry_run_runs.json  evidence.json  live_connector_evaluations.json  model_safety_reviews.json  procurement_cases.json  runtime_traces.json  tool_sandbox_runs.json
framework/backend/tests/: test_api_smoke.py  test_approval_workflow.py  test_audit_event_bus.py  test_connector_contract_sdk.py  test_control_plane_stabilization.py  test_evaluator.py  test_governance_workflow.py  test_identity_secrets_boundary.py  test_live_connector_governance.py  test_model_safety_review.py  test_policy_guardrail.py  test_procurement_accelerator.py  test_provider_gateway.py  test_registry_and_evidence.py  test_runtime_enforcement.py  test_security_rbac.py  test_tenant_storage.py  test_tool_sandbox.py  test_trace_ledger.py  test_v2_1_adoption_readiness.py  test_v2_2_benchmark_harness.py  test_v2_3_deployment_profiles.py  test_v2_4_launch_assets.py  (+4 more)
(+704 files in other folders)
