[project]
name = "agentops-mesh-api"
version = "2.8.0"
description = "AgentOps control plane backend for Open Enterprise AgentOps Mesh"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.26.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentops_mesh_api*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
