[project]
name = "agentops-mesh-api"
version = "2.8.0"
description = "AgentOps control plane backend for Open Enterprise AgentOps Mesh"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0"
]

[project.urls]
Homepage = "https://annapurnaagenticsolutions.github.io/open-enterprise-agentops-mesh/"
Repository = "https://github.com/annapurnaagenticsolutions/open-enterprise-agentops-mesh"
Documentation = "https://github.com/annapurnaagenticsolutions/open-enterprise-agentops-mesh#readme"
Issues = "https://github.com/annapurnaagenticsolutions/open-enterprise-agentops-mesh/issues"

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.26.0"]

[project.scripts]
meshctl = "agentops_mesh_api.meshctl:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentops_mesh_api*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
